--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
 		"registry": "https://registry.npmjs.org/"
 	},
 	"dependencies": {
+		"ajv": "^8.12.0",
 		"husky": "^8.0.3",
 		"immer": "^10.0.3",
 		"lodash-es": "^4.17.21",
@@ -62,6 +63,7 @@
 		"esbuild": "^0.19.5",
 		"eslint": "^8.52.0",
 		"jest": "^29.7.0",
+		"json-schema-to-ts": "3.0.0",
 		"knip": "^2.39.0",
 		"lint-staged": "^15.0.2",
 		"only-allow": "^1.2.1",
